Fix: remove touch double on much. Fix display of %, align Won.

--- a/qml/html/style.css
+++ b/qml/html/style.css
@@ -120,6 +120,10 @@ input[type='text']{
     touch-action: manipulation;
 }
 
+.back-button {
+    touch-action: manipulation;
+}
+
 
 .btn:hover{
     border: 2px solid  #00ffff; 
